# ai_agent

./: .env.back  Cargo.toml  lifetime.txt
examples/: stream_chat.rs
src/: constant.rs  lib.rs  llm.rs  main.rs
src/llm/: complete.rs  semaphore.rs  stream.rs
src/models/: action_plan.rs
